SERVER-39655 Change uint32_t to int32_t in fetchStats